fixed overflow using cheap solution :(

--- a/src/components/AllMusicPage/AllMusicPage.module.css
+++ b/src/components/AllMusicPage/AllMusicPage.module.css
@@ -1,9 +1,10 @@
 .allMusicPage {
   display: flex;
   flex-direction: column;
-  overflow: auto;
   height: 100%;
+  gap: 5px
+}
+.ReactVirtualized__Grid__innerScrollContainer {
   padding-top: 55px;
   padding-bottom: 85px;
-  gap: 5px
 }
